kubernetes/apps/automation/temporal/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-local
spec:
  type: ExternalName
  externalName: 10.0.98.105
