kubernetes/apps/automation/temporal/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-local-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - temporal.${SECRET_DOMAIN}
      secretName: temporal-tls-secret
  rules:
    - host: temporal.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-local
                port:
                  number: 8233
